# amazing_hunting

./: db.sqlite3  pyproject.toml  pytests.ini
amazing_hunting/: settings.py  urls.py
authentication/: models.py  serializers.py  urls.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: views.py
companies/migrations/: 0001_initial.py
tests/: factories.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py
vacancies/: admin.py  models.py  serializers.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_acnive.py  0006_rename_is_acnive_skill_is_active.py  0007_rename_create_vacancy_created.py  0008_vacancy_likes.py  0009_vacancy_min_experience.py  0010_vacancy_updated_at.py
