[tool.poetry]
name = "amazing-hunting"
version = "0.1.0"
description = ""
authors = ["Danil Mirosh <miroshnichenko.da.vi@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.0"
drf-spectacular = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
